Fix Supervisor to build and serve frontend at container runtime

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,6 +15,6 @@ autorestart=true
 
 [program:frontend]
 directory=/app/frontend
-command=yarn preview --host 0.0.0.0 --port 3000
+command=sh -c "yarn build && yarn preview --host 0.0.0.0 --port 3000"
 autostart=true
 autorestart=true
